[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.100"
parking_lot = "0.12.5"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
] }
